fix: resolve all lint errors and fix pre-commit hook
- Make .husky/pre-commit executable to ensure hook runs
- Refactor HomePage into smaller components to meet 50-line limit
- Mark RootLayout props as read-only
- Remove async from GET route (no await needed)
- Add proper TypeScript types to health route tests
- Update page tests to match new version numbers
- Add .next/ to .gitignore (Next.js build artifacts)

All lint checks and tests passing.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ sbom.cdx.json
 .claude/settings.local.json
 tmp/
 
+# Next.js build output
+.next/
+out/
+*.tsbuildinfo
+
 # Code quality reports
 reports/
 
