fix: add test coverage and formatting fixes
- Add tests for default environment variable paths (100% branch coverage)
- Fix Prettier formatting in migrate-to-nextjs.md, next-env.d.ts, tsconfig.json
- All tests passing (17/17)
- Coverage: 100% across all metrics

This commit should trigger the pre-commit hook (now executable).

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": [
-      "ES2022",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
@@ -28,9 +24,7 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
@@ -40,11 +34,5 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules",
-    ".next",
-    "dist",
-    "coverage",
-    "reports"
-  ]
+  "exclude": ["node_modules", ".next", "dist", "coverage", "reports"]
 }
